@@ -28,6 +28,10 @@ ZEND_END_ARG_INFO()
 ZEND_BEGIN_ARG_INFO_EX(ngx_socket_tcp_close_arginfo, 0, 0, 0)
 ZEND_END_ARG_INFO()
 
+ZEND_BEGIN_ARG_INFO_EX(ngx_socket_tcp_settimeout_arginfo, 0, 0, 1)
+    ZEND_ARG_INFO(0, time)
+ZEND_END_ARG_INFO()
+
 PHP_METHOD(ngx_socket_tcp, __construct)
 {
 
@@ -166,12 +170,35 @@ PHP_METHOD(ngx_socket_tcp, close)
     ngx_http_set_ctx(r, ctx, ngx_http_php_module);
 }
 
+PHP_METHOD(ngx_socket_tcp, settimeout)
+{
+    long time;
+
+    if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "l", &time) == FAILURE){
+        RETURN_NULL();
+    }
+
+    ngx_http_request_t *r = PHP_NGX_G(global_r);
+
+    ngx_http_php_ctx_t *ctx = ngx_http_get_module_ctx(r, ngx_http_php_module);
+
+    if (ctx == NULL){
+        
+    }
+
+    ctx->timeout = time;
+
+    ngx_http_set_ctx(r, ctx, ngx_http_php_module);
+
+}
+
 static const zend_function_entry php_ngx_socket_tcp_class_functions[] = {
     PHP_ME(ngx_socket_tcp, __construct, ngx_socket_tcp_construct_arginfo, ZEND_ACC_PUBLIC | ZEND_ACC_CTOR)
     PHP_ME(ngx_socket_tcp, connect, ngx_socket_tcp_connect_arginfo, ZEND_ACC_PUBLIC)
     PHP_ME(ngx_socket_tcp, send, ngx_socket_tcp_send_arginfo, ZEND_ACC_PUBLIC)
     PHP_ME(ngx_socket_tcp, receive, ngx_socket_tcp_receive_arginfo, ZEND_ACC_PUBLIC)
     PHP_ME(ngx_socket_tcp, close, ngx_socket_tcp_close_arginfo, ZEND_ACC_PUBLIC)
+    PHP_ME(ngx_socket_tcp, settimeout, ngx_socket_tcp_settimeout_arginfo, ZEND_ACC_PUBLIC)
     {NULL, NULL, NULL, 0, 0}
 };
 
