@@ -18,6 +18,7 @@ PHP_METHOD(ngx_socket_tcp, connect);
 PHP_METHOD(ngx_socket_tcp, send);
 PHP_METHOD(ngx_socket_tcp, receive);
 PHP_METHOD(ngx_socket_tcp, close);
+PHP_METHOD(ngx_socket_tcp, settimeout);
 
 void ngx_socket_tcp_init(int module_number TSRMLS_DC);
 
